# LocketDesktop

./: .gitignore  GUIDE.md  LICENSE  README.md  index.html  manifest.json  package.json  pnpm-lock.yaml  test.ts  vite.config.ts
src/: MainContext.ts  Popup.tsx  const.ts  index.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Avatar.module.scss  Avatar.tsx  Logo.tsx
src/constants/: emojis.ts
src/lib/: momentService.ts  store.ts  uploadService.ts
src/screens/: About.module.scss  About.tsx  Chat.module.scss  Chat.tsx  Chat.tsx.scss  Global.module.scss  Global.tsx  Login.tsx  Main.module.scss  Main.tsx  Notification.module.scss  Notification.tsx  SavedMoments.tsx  SavedSection.module.scss  Uploader.module.scss  Uploader.tsx
src/services/: api.ts
src/types/: moments.ts
src/utils/: string.ts
